--- a/Main-Products.html
+++ b/Main-Products.html
@@ -28,25 +28,25 @@
                       <li><a href="ReTinq_Products\subnavs\meat.html" target="displayContent">Meat & Eggs</a></li>
                       <li><a href="ReTinq_Products\subnavs\cakes.html" target="displayContent">Cakes</a></li>
                       <li><a href="ReTinq_Products\subnavs\Sauce.html" target="displayContent">Sauce & Spreads</a></li>
-                      <li><a href="#">Custom logo</a></li>
+                      <li><a href="ReTinq_Products\subnavs\Sauce.html">Custom logo</a></li>
                     </ul>
                   </div>
                   <div class="row">
                     <header>Email Services</header>
                     <ul class="mega-links">
-                      <li><a href="#">Personal Email</a></li>
-                      <li><a href="#">Business Email</a></li>
-                      <li><a href="#">Mobile Email</a></li>
-                      <li><a href="#">Web Marketing</a></li>
+                      <li><a href="ReTinq_Products\subnavs\Sauce.html">Personal Email</a></li>
+                      <li><a href="ReTinq_Products\subnavs\Sauce.html">Business Email</a></li>
+                      <li><a href="ReTinq_Products\subnavs\Sauce.html">Mobile Email</a></li>
+                      <li><a href="ReTinq_Products\subnavs\Sauce.html">Web Marketing</a></li>
                     </ul>
                   </div>
                   <div class="row">
                     <header>Security services</header>
                     <ul class="mega-links">
-                      <li><a href="#">Site Seal</a></li>
-                      <li><a href="#">VPS Hosting</a></li>
-                      <li><a href="#">Privacy Seal</a></li>
-                      <li><a href="#">Website design</a></li>
+                      <li><a href="ReTinq_Products\subnavs\Sauce.html">Site Seal</a></li>
+                      <li><a href="ReTinq_Products\subnavs\Sauce.html">VPS Hosting</a></li>
+                      <li><a href="ReTinq_Products\subnavs\Sauce.html">Privacy Seal</a></li>
+                      <li><a href="ReTinq_Products\subnavs\Sauce.html">Website design</a></li>
                     </ul>
                   </div>
                 </div>
